embedding优化搜索
